# mcp-server-ollama-deep-researcher

./: .env.example  .gitignore  .mcp.json.1password.example  .mcp.json.example  .mcp.json.template  DEPRECATED.md  Dockerfile  Example-Results-Transcript.md  LICENSE  README.md  docker-compose.yml  manifest.json  package-lock.json  package.json  pyproject.toml  run-docker.bat  run-docker.sh  server.json  tsconfig.json
.1password/: environments.toml
.context/: docs.md  index.md
.context/diagrams/: research-workflow.md
src/: index.ts
src/assistant/: configuration.py  graph.py  run_research.py  state.py  utils.py
