[project]
name = "ollama-deep-researcher"
version = "1.0.0"
description = "MCP server for deep research using Ollama LLMs"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.0.20",
    "langchain-core>=0.1.22",
    "langchain-ollama>=0.0.1",
    "langchain-exa>=0.1.0",
    "tavily-python>=0.5.1",
    "pplx>=0.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
